--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -9,6 +9,7 @@ import /init.usb.rc
 import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
+import /init.du.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
